# quantum-ec-synthesis

./: .gitignore  .gitmodules  README.org  pyproject.toml  requirements.txt
benchmark-circuits/: clifford-4-1024-opt.qasm  clifford-4-1024.qasm  clifford-4-128-opt.qasm  clifford-4-128.qasm  clifford-4-16-opt.qasm  clifford-4-256-opt.qasm  clifford-4-256.qasm  clifford-4-32-opt.qasm  clifford-4-32.qasm  clifford-4-512-opt.qasm  clifford-4-512.qasm  clifford-4-64-ec.qasm  clifford-4-64-opt-ec.qasm  clifford-4-64-opt.qasm  clifford-4-64.qasm
results/circuit-depth-ec0-p0/: data.csv
results/circuit-depth-ec0-p1/: data.csv
results/circuit-depth-ec0-p10/: data.csv
results/circuit-depth-ec0-p5/: data.csv
results/circuit-depth-ec0-p50/: data.csv
results/circuit-depth-ec30-p0/: data.csv
results/circuit-depth-ec30-p1/: data.csv
results/circuit-depth-ec30-p10/: data.csv
results/circuit-depth-ec30-p5/: data.csv
results/circuit-depth-ec30-p50/: data.csv
results/correction-frequency-d1024-p0/: data.csv
results/correction-frequency-d1024-p1/: data.csv
results/correction-frequency-d1024-p10/: data.csv
results/correction-frequency-d128-p0/: data.csv
results/correction-frequency-d128-p1/: data.csv
results/correction-frequency-d128-p10/: data.csv
results/correction-frequency-d16-p10/: data.csv
results/correction-frequency-d256-p0/: data.csv
results/correction-frequency-d256-p1/: data.csv
results/correction-frequency-d256-p10/: data.csv
results/correction-frequency-d512-p0/: data.csv
results/correction-frequency-d512-p1/: data.csv
results/correction-frequency-d512-p10/: data.csv
results/error-rate-ec0-d1024/: data.csv
results/error-rate-ec0-d128/: data.csv
results/error-rate-ec0-d2048/: data.csv
src/: config.py  experiment.py  generate.py  main.py  simulate.py  simulator.py  synthesize.py  synthesizer.py  util.py
(+200 files in other folders)
