[project]
name = "code-synthesis"
version = "0.1.0"
description = ""
authors = [
    {name = "Kostiantyn Milkevych",email = "kmilkevych@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "qiskit[visualization] (>=2.2.0,<3.0.0)",
    "qiskit-ibm-runtime (>=0.41.1,<0.42.0)"
]

[tool.poetry]
packages = [{include = "code_synthesis", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
