[project]
name = "quantum-ec-synthesis"
version = "0.1.0"
description = "Quantum Error-Correction Code Syntehsis for Fault-Tolerant computation."
authors = [
    {name = "Kostiantyn Milkevych"}
]
readme = "README.org"
requires-python = ">=3.13"
dependencies = [
    "qiskit[qasm3-import] (>=2.2.1,<3.0.0)",
    "qiskit-aer (>=0.17.2,<0.18.0)",
    "matplotlib[colormaps] (>=3.10.7,<4.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "qiskit-ibm-runtime (>=0.43.1,<0.44.0)",
    "pylatexenc (>=2.10,<3.0)",
    "q-synth (>=5.1,<6.0)",
]

[dependency-groups]
dev = [
    "pytest (>=8.3.3,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
